# PointSetsFitting

./: README.md  point_sets_fitting.py  test_psf.py
.github/workflows/: cpp.yml  pythonpackage.yml
cpp/: CMakeLists.txt  app_psf_cmd.cpp  psf.cpp  psf.h
cpp/test/: test_psf.cpp
python/: point_sets_fitting.py  pyproject.toml  test_psf.py
