[tool.poetry]
name = "point-sets-fitting"
version = "0.1.0"
description = "Least-Squares Fitting of Two 3-D Point Sets"
authors = ["Adrian Schneider <adrian.schneider.pr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.2"
transforms3d = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
